--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,9 +10,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="./favicon.png">
   <script src="https://kit.fontawesome.com/fbd3c6db4a.js" crossorigin="anonymous"></script>
 
-  <title>React App</title>
+  <title>ChargeBuddy</title>
 
 </head>
 
